--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 
 .env
 /target/
+/bin/
+
+
+curl -k https://localhost:8088/services/collector \
+  -H "Authorization: Splunk 21bf10c0-d52a-436e-8763-6e9e61f632c3" \
+  -H "Content-Type: application/json" \
+  -d '{"event":"ping-from-curl","sourcetype":"_json","index":"main"}'
