--- a/pom.xml
+++ b/pom.xml
@@ -24,17 +24,27 @@
         </configuration>
       </plugin>
       
-    <plugin>
-      <groupId>org.codehaus.mojo</groupId>
-      <artifactId>exec-maven-plugin</artifactId>
-      <version>3.1.0</version>
-      <configuration>
-        <mainClass>controller.ServerApp</mainClass>
-      </configuration>
-    </plugin>
+ <plugin>
+  <groupId>org.codehaus.mojo</groupId>
+  <artifactId>exec-maven-plugin</artifactId>
+  <version>3.1.0</version>
+  <configuration>
+    <mainClass>controller.ServerApp</mainClass>
+  </configuration>
+</plugin>
+
   </plugins>
       </build>
   
+  
+  <repositories>
+  <repository>
+    <id>splunk-artifactory</id>
+    <name>Splunk Releases</name>
+    <url>https://splunk.jfrog.io/splunk/ext-releases-local</url>
+  </repository>
+</repositories>
+
   <dependencies>
 
   <!-- MySQL Connector -->
@@ -91,21 +101,25 @@
     <version>4.4.13</version>
   </dependency>
 
-<!-- JWT Token dependency -->
+<!-- API (defines io.jsonwebtoken.Claims) -->
 <dependency>
   <groupId>io.jsonwebtoken</groupId>
   <artifactId>jjwt-api</artifactId>
   <version>0.11.5</version>
 </dependency>
+
+<!-- Runtime impl -->
 <dependency>
   <groupId>io.jsonwebtoken</groupId>
   <artifactId>jjwt-impl</artifactId>
   <version>0.11.5</version>
   <scope>runtime</scope>
 </dependency>
+
+<!-- Serializer -->
 <dependency>
   <groupId>io.jsonwebtoken</groupId>
-  <artifactId>jjwt-jackson</artifactId> <!-- for JSON serialization -->
+  <artifactId>jjwt-jackson</artifactId>
   <version>0.11.5</version>
   <scope>runtime</scope>
 </dependency>
@@ -125,6 +139,27 @@
     <artifactId>java-dotenv</artifactId>
     <version>5.2.2</version>
   </dependency>
+
+<!-- SLF4J API + Logback implementation -->
+<dependency>
+  <groupId>org.slf4j</groupId><artifactId>slf4j-api</artifactId><version>2.0.13</version>
+</dependency>
+<dependency>
+  <groupId>ch.qos.logback</groupId><artifactId>logback-classic</artifactId><version>1.5.6</version>
+</dependency>
+
+<!-- JSON encoder + StructuredArguments (key/value fields in logs) -->
+<dependency>
+  <groupId>net.logstash.logback</groupId>
+  <artifactId>logstash-logback-encoder</artifactId>
+  <version>7.4</version>
+</dependency>
+
+<dependency>
+  <groupId>com.splunk.logging</groupId>
+  <artifactId>splunk-library-javalogging</artifactId>
+  <version>1.11.8</version>
+</dependency>
 
 </dependencies>
 
